2006-11-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* xscripts: New module; imported with...
	(MinGW): this vendor tag, and...
	(r0-0): this release tag.